# ctprintf

./: CMakeLists.txt  CharArgument.cpp  CharArgument.h  DecimalIntegralArgument.cpp  DecimalIntegralArgument.h  Formatted.h  FormattingFunction.h  GNULiteral.h  GetLengthVisitor.h  HexIntegralArgument.cpp  HexIntegralArgument.h  InlineLiteralString.h  LICENSE  MathOperators.h  Ostream.h  OstreamVisitor.cpp  OstreamVisitor.h  Parser.h  README.md  Span.cpp  Span.h  String.h  StringAccumulatingVisitor.cpp  StringAccumulatingVisitor.h  StringArgument.cpp  StringArgument.h
examples/: CMakeLists.txt  LiteralDemo.cpp  ParserDemo.cpp  RuntimeBenchmarks.cpp  StaticBenchmarks.cpp  WLiteralDemo.cpp
tests/: CMakeLists.txt  CharArgumentTest.cpp  CommonTests.h  DecimalIntegralArgumentTest.cpp  LowerHexIntegralArgumentTest.cpp  OstreamVisitorTest.cpp  SpanTest.cpp  StringAccumulatingVisitorTest.cpp  StringArgumentTest.cpp  UpperHexIntegralArgumentTest.cpp
